--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,12 @@
         android:theme="@style/Theme.WorksWhale"
         tools:targetApi="31">
         <receiver
-            android:name=".AlarmReceiver"
+            android:name=".contactListFragment.AlarmReceiver"
             android:enabled="true"
             android:exported="true"/>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".mainActivity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
